# AgDR-Mantle

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.md
python/agdr_mantle/: __init__.py  brotli_compress.py  mantle_engine.py  pq_fortification.py  self_learning.py  sovereign_witness.py
spine/: README (1).md  README-PQC.md  agdr_medical_swarm.py  agdr_sovereign_v1_0_fixed.py  agdr_spine.py  nemo_claw_blueprint.yaml
src/: lib.rs
tests/: test_mantle.py
