[project]
name = "agdr-mantle"
version = "1.0.1"
description = "AgDR-Mantle: Sovereign post-quantum fortification for AgDR-Phoenix output (ML-DSA-65, Sparse Merkle, Brotli)"
readme = "README.md"
license = {text = "CC0-1.0 OR Apache-2.0"}
authors = [{name = "Genesis Glass Foundation", email = "monk@accountability.ai"}]
requires-python = ">=3.9"
keywords = ["agdr", "accountability", "post-quantum", "ml-dsa", "fips-204", "evidentiary", "sovereign"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "numpy",
    "pydantic",
    "blake3",
    "brotli",
]

[project.optional-dependencies]
post-quantum = ["pqcrypto>=0.4.0"]
self-learning = []
sovereign = []

[project.urls]
Homepage = "https://accountability.ai"
Repository = "https://github.com/aiccountability-source/AgDR-Mantle"
Specification = "https://accountability.ai/agdr"

[tool.maturin]
bindings = "pyo3"
module-name = "agdr_mantle._core"
python-source = "python"
